--- a/jsp/src/main/webapp/1_JSP기초/1_서블릿통신.html
+++ b/jsp/src/main/webapp/1_JSP기초/1_서블릿통신.html
@@ -7,7 +7,7 @@
 <body>
 	
 	<!-- 서블릿 통신  -->
-	<form action="test" method="get">  
+	<form action="../test" method="get">  
 		<input type="text" name="id">
 		<input type="submit" value="전송1" >
 	</form>
